<resources>
    <string name="app_name">Android Training</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than
 the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea
 and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river
 in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest
 freshwater lake.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="show_answer">Show Answer</string>
    <string name="second_activity">Second Activity</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="static_fargment">Static Fargment</string>
    <string name="dynamic_fragment">Dynamic Fragment</string>
    <string name="fragment_3">Fragment 3</string>
    <string name="title_activity_linear_layout_example">LinearLayoutExample</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="product_description">Product Description :</string>
    <string name="product_name">Sansui Kabel RCA Konektor Audio Mobil</string>
    <string name="product_price">Rp 26.000</string>
    <string name="buy_now">Buy Now</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="view_pager">View Pager</string>
    <string name="listview">ListView</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="fragment_communication">Fragment Communication</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="fragment_communication_2">Fragment Communication 2</string>
   <string name="fragment_communication_3">Fragment Communication 3</string>
   <string name="rotation_fragment">Rotation Fragment</string>
   <string name="add_counter">Add Counter</string>
   <string name="_0">0</string>
   <string name="show_dialog">Show Dialog</string>
   <string name="nested_fragment">Nested Fragment</string>
   <string name="blibli_web_app">BliBli Web App</string>
   <string name="implicit_intent">Implicit Intent</string>
   <string name="send">Send</string>
   <string name="handler">Handler</string>


</resources>