<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:android="http://schemas.android.com/apk/res/android" />
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    <Button
        android:id="@+id/btn_second_home"
        android:layout_width="wrap_content"
        android:layout_margin="12dp"

        android:layout_height="wrap_content"
        android:text="@string/second_activity" />
    <Button
        android:id="@+id/btn_fragment1_home"
        android:layout_width="wrap_content"
        android:layout_margin="12dp"

        android:layout_height="wrap_content"
        android:text="@string/dynamic_fragment" />
    <Button
        android:id="@+id/btn_fragment2_home"
        android:layout_width="wrap_content"
        android:layout_margin="12dp"

        android:layout_height="wrap_content"
        android:text="@string/static_fargment" />
    <Button
        android:id="@+id/btn_linear_home"
        android:layout_width="wrap_content"
        android:layout_margin="12dp"
        android:layout_height="wrap_content"
        android:text="@string/linear_layout" />
    <Button
        android:id="@+id/btn_frame_home"
        android:layout_width="wrap_content"
        android:layout_margin="12dp"
        android:layout_height="wrap_content"
        android:text="@string/frame_layout" />
    <Button
        android:id="@+id/btn_constraint_home"
        android:layout_width="wrap_content"
        android:layout_margin="12dp"
        android:layout_height="wrap_content"
        android:text="@string/constraint_layout" />
    <Button
        android:id="@+id/btn_relative_home"
        android:layout_width="wrap_content"
        android:layout_margin="12dp"
        android:layout_height="wrap_content"
        android:text="@string/relative_layout" />
    <Button
        android:id="@+id/btn_view_pager_home"
        android:layout_width="wrap_content"
        android:layout_margin="12dp"
        android:layout_height="wrap_content"
        android:text="@string/view_pager" />
    <Button
        android:id="@+id/btn_fragment_communication"
        android:layout_width="wrap_content"
        android:layout_margin="12dp"
        android:layout_height="wrap_content"
        android:text="@string/fragment_communication" />
    <Button
        android:id="@+id/btn_fragment_communication2"
        android:layout_width="wrap_content"
        android:layout_margin="12dp"
        android:layout_height="wrap_content"
        android:text="@string/fragment_communication_2" />
    <Button
        android:id="@+id/btn_fragment_communication3"
        android:layout_width="wrap_content"
        android:layout_margin="12dp"
        android:layout_height="wrap_content"
        android:text="@string/fragment_communication_3" />
    <Button
        android:id="@+id/btn_fragment_rotation"
        android:layout_width="wrap_content"
        android:layout_margin="12dp"
        android:layout_height="wrap_content"
        android:text="@string/rotation_fragment" />
    <Button
        android:id="@+id/btn_custom_dialog"
        android:layout_width="wrap_content"
        android:layout_margin="12dp"
        android:layout_height="wrap_content"
        android:text="@string/show_dialog" />
    <Button
        android:id="@+id/btn_nested_fragment"
        android:layout_width="wrap_content"
        android:layout_margin="12dp"
        android:layout_height="wrap_content"
        android:text="@string/nested_fragment" />
    <Button
        android:id="@+id/btn_wev_view"
        android:layout_width="wrap_content"
        android:layout_margin="12dp"
        android:layout_height="wrap_content"
        android:text="@string/blibli_web_app" />
    <Button
        android:id="@+id/btn_implicit_intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/implicit_intent"
        />
    <Button
        android:id="@+id/btn_handler_looper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/handler"
        />

</LinearLayout>
</ScrollView>