<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/shoes"
        android:foregroundGravity="top"
        android:contentDescription="@string/product_name"
        android:elevation="8dp"
        android:scaleType="fitXY"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="54dp"
        android:text="@string/product_name"
        android:textColor="#2a2a2a"
        android:textSize="16sp"
        android:layout_gravity="center|start"
        android:textStyle="bold|italic" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="84dp"
        android:layout_gravity="center|start"
        android:layout_marginStart="16dp"
        android:textStyle="bold|italic"
        android:textColor="#FF5733"
        android:text="@string/product_price"
        />
    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_marginTop="114dp"
        android:layout_gravity="center|start"
        android:rating="3.5"
        android:layout_marginStart="16dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="144dp"
        android:layout_gravity="center|start"
        android:layout_marginBottom="8dp"
        android:background="#eeeeee"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="154dp"
        android:layout_gravity="center|start"
        android:layout_marginStart="16dp"
        android:textStyle="bold|italic"
        android:textColor="#2a2a2a"
        android:text="@string/product_description"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="174dp"
        android:layout_gravity="center|start"
        android:layout_marginStart="16dp"
        android:textStyle="bold|italic"
        android:textColor="#aaaaaa"
        android:text="@string/product_name"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#FF5733"
        android:textColor="@color/white"
        android:text="@string/buy_now"
        android:textSize="20sp"
        android:layout_marginTop="230dp"
        />


</FrameLayout>