<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <ImageView
        android:id="@+id/img_product"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/shoes"
        android:contentDescription="@string/product_name"
        android:elevation="8dp"
        android:scaleType="fitXY"/>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold|italic"
        android:textColor="#2a2a2a"
        android:text="@string/product_name"
        android:layout_below="@+id/img_product"/>
    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold|italic"
        android:textColor="#FF5733"
        android:text="@string/product_price"
        android:layout_below="@+id/tv_name"
        />
    <RatingBar
        android:id="@+id/rb_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/ratingBarStyleSmall"
        android:rating="3.5"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/tv_price"/>
    <View
        android:id="@+id/view_rel"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#eeeeee"
        android:layout_below="@+id/rb_rating"/>
    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold|italic"
        android:textColor="#2a2a2a"
        android:text="@string/product_description"
        android:layout_below="@id/view_rel"/>
    <TextView
        android:id="@+id/tv_p_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold|italic"
        android:textColor="#aaaaaa"
        android:text="@string/product_name"
        android:layout_below="@+id/tv_desc"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#FF5733"
        android:textColor="@color/white"
        android:text="@string/buy_now"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_p_desc"/>

</RelativeLayout>